I have added comments to the landing page code, the video background was more resposive using the previous code but there was white space. I have decided to use this code as it solves the issue of white space.

--- a/style.css
+++ b/style.css
@@ -71,10 +71,16 @@
   width: 50vw;
 }
 .video{
-  width:100%;
-  height: fit-content;
-  margin:0;
-}  
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+  position: top;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: -1;
+}    
 .footer {
   position: fixed;
   left: 0;
